Manage relative path for location and include declaration.

--- a/fr.obeo.releng.targetplatform/plugin.xml
+++ b/fr.obeo.releng.targetplatform/plugin.xml
@@ -23,5 +23,12 @@
         </run>
      </application>
   </extension>
+  <extension
+        point="org.eclipse.emf.ecore.factory_override">
+     <factory
+           class="fr.obeo.releng.targetplatform.impl.TargetPlatformFactoryImplExt"
+           uri="fr.obeo.releng.targetplatform">
+     </factory>
+  </extension>
 
 </plugin>
